--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 
-div{
+/* div{
 	width:300px;
 	background-color:lightblue;
 	padding:50px;
 	border:15px solid blue;
 	margin:20px;
-	
-	
-}
+} */
